[brianph-mdb] Fixed uneven panels height

--- a/[BRIAN]/brianph-mdb/src/scss/_police.scss
+++ b/[BRIAN]/brianph-mdb/src/scss/_police.scss
@@ -913,7 +913,7 @@
                     grid-template-columns: 1fr;
                     grid-template-rows: 60px 50px 1fr;
                     display: grid;
-                    height: 715px;
+                    height: 720px;
                  
                     &-header {
 
@@ -1023,7 +1023,7 @@
                         overflow-y: scroll;
                         grid-row: 3/4;
                         z-index: 9997;
-                        height: 595px;
+                        height: 600px;
 
                         @include conceal-scrollbar;
 
@@ -1131,7 +1131,7 @@
                     grid-template-columns: 1fr;
                     grid-template-rows: 1fr;
                     display: grid;
-                    height: 715px;
+                    height: 720px;
 
                     &-placeholder {
 
@@ -1194,7 +1194,7 @@
                     grid-template-columns: 1fr;
                     grid-template-rows: 60px 170px 150px 1fr;
                     display: grid;
-                    height: 715px;
+                    height: 720px;
 
                     &-header {
 
@@ -1608,7 +1608,7 @@
                     grid-template-columns: 1fr;
                     grid-template-rows: 60px 170px 150px 1fr;
                     display: grid;
-                    height: 715px;
+                    height: 720px;
 
                     &-header {
 
@@ -2044,7 +2044,7 @@
                     grid-template-columns: 10px 1fr 10px;
                     grid-template-rows: 60px 10px 1fr 10px;
                     display: grid;
-                    height: 715px;
+                    height: 720px;
 
                     &-header {
 
@@ -2525,7 +2525,7 @@
                     grid-template-columns: 10px 1fr 10px;
                     grid-template-rows: 60px 10px 1fr 10px;
                     display: grid;
-                    height: 715px;
+                    height: 720px;
 
                     &-header {
 
@@ -3362,7 +3362,7 @@
                     grid-template-columns: 1fr;
                     grid-template-rows: 60px 50px 1fr;
                     display: grid;
-                    height: 715px;
+                    height: 720px;
                  
                     &-header {
 
@@ -3472,7 +3472,7 @@
                         overflow-y: scroll;
                         grid-row: 3/4;
                         z-index: 9997;
-                        height: 595px;
+                        height: 600px;
 
                         @include conceal-scrollbar;
 
@@ -3580,7 +3580,7 @@
                     grid-template-columns: 1fr;
                     grid-template-rows: 1fr;
                     display: grid;
-                    height: 715px;
+                    height: 720px;
 
                     &-placeholder {
 
@@ -3643,7 +3643,7 @@
                     grid-template-columns: 1fr;
                     grid-template-rows: 60px 170px 150px 1fr;
                     display: grid;
-                    height: 715px;
+                    height: 720px;
 
                     &-header {
 
@@ -4057,7 +4057,7 @@
                     grid-template-columns: 1fr;
                     grid-template-rows: 60px 170px 150px 1fr;
                     display: grid;
-                    height: 715px;
+                    height: 720px;
 
                     &-header {
 
@@ -4488,7 +4488,7 @@
                     grid-template-columns: 10px 1fr 10px;
                     grid-template-rows: 60px 10px 1fr 10px;
                     display: grid;
-                    height: 715px;
+                    height: 720px;
 
                     &-header {
 
@@ -4624,7 +4624,7 @@
                     grid-template-columns: 10px 1fr 10px;
                     grid-template-rows: 60px 10px 1fr 10px;
                     display: grid;
-                    height: 715px;
+                    height: 720px;
 
                     &-header {
 
@@ -4836,7 +4836,7 @@
                     grid-template-columns: 1fr;
                     grid-template-rows: 60px 50px 1fr;
                     display: grid;
-                    height: 715px;
+                    height: 720px;
                  
                     &-header {
 
@@ -4946,7 +4946,7 @@
                         overflow-y: scroll;
                         grid-row: 3/4;
                         z-index: 9997;
-                        height: 595px;
+                        height: 600px;
 
                         @include conceal-scrollbar;
 
@@ -5054,7 +5054,7 @@
                     grid-template-columns: 1fr;
                     grid-template-rows: 1fr;
                     display: grid;
-                    height: 715px;
+                    height: 720px;
 
                     &-placeholder {
 
@@ -5117,7 +5117,7 @@
                     grid-template-columns: 1fr;
                     grid-template-rows: 60px 170px 200px 1fr;
                     display: grid;
-                    height: 715px;
+                    height: 720px;
 
                     &-header {
 
@@ -5617,7 +5617,7 @@
                     grid-template-columns: 1fr;
                     grid-template-rows: 60px 170px 200px 1fr;
                     display: grid;
-                    height: 715px;
+                    height: 720px;
 
                     &-header {
 
@@ -6134,7 +6134,7 @@
                     grid-template-columns: 10px 1fr 10px;
                     grid-template-rows: 60px 10px 1fr 10px;
                     display: grid;
-                    height: 715px;
+                    height: 720px;
 
                     &-header {
 
@@ -6270,7 +6270,7 @@
                     grid-template-columns: 10px 1fr 10px;
                     grid-template-rows: 60px 10px 1fr 10px;
                     display: grid;
-                    height: 715px;
+                    height: 720px;
 
                     &-header {
 
